# Jarvis

./: README.md  comprehensive_test.py  config.toml  debug_agent.py  pyproject.toml  quick_test.py  run_tests.py  simple_test.py  test_agent.py  test_agent_query.py  test_commands.txt  test_final.py  test_from_tool.txt  test_llm.py  test_ollama.py  test_tools.py
jarvis/: __main__.py  agent.py  config.py  logger.py  loop.py  memory.py
jarvis/tools/: __init__.py  base.py  code_tool.py  fs_tool.py  memory_tool.py  search_tool.py  shell_tool.py  task_tool.py  web_tool.py
jarvis/voice/: stt.py  tts.py
tests/: test_memory.py  test_tools.py
