[project]
name = "jarvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "faster-whisper>=1.2.1",
    "google-genai>=1.73.1",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "langchain-core>=1.3.0",
    "langchain-openai>=1.3.0",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.8",
    "numpy>=2.4.4",
    "rich>=15.0.0",
    "sentence-transformers>=5.4.1",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "structlog>=25.5.0",
    "tomli>=2.4.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
jarvis = "jarvis.__main__:main"
